updated about page with new visuals and lucie/omar info

--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
 <div class="about-header">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1 top-xlarge-spacer bottom-large-spacer" align="center">
-        <img src="/images/KO_OP-logo-colour.svg"   class="img-responsive">
+      <div class="col-md-6 top-xlarge-spacer" align="center">
+        <!-- <img src="/images/KO_OP-logo-colour.svg"   class="img-responsive"> -->
       </div>
     </div>
   </div>
@@ -94,7 +94,7 @@
 <div class="">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1 " align="let">
+      <div class="col-md-10 bottom-small-spacer" align="left">
         <p><span class="KO_OP2">KO_OP</span> is an artist run and owned studio. Founded in 2012, we've been experimenting with games and interactive art ever since. In 2014 we established the <strong class="yellow">KOLAB</strong> fund, a small stipend for outside artists to make games with our help.</p>
        <div class="hidden-xs bottom-large-spacer"></div>
        <div class="visible-xs bottom-small-spacer"></div>
@@ -112,41 +112,64 @@
       </div>
       
 
-      <div class="col-sm-4">
-       <img src="/images/sam.png" class="img-responsive" width="150px">
-       <p><strong>Samuel Boucher</strong> is a <span class="KO_OP2">KO_OP</span> art director and designer. Sam acts as design and art lead on GNOG.</p>
-       <a href="https://twitter.com/monsieureureka" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @monsieureureka</a>
+      <div class="col-sm-3">
+        <div align="left">
+       <img src="/images/sam.png" class="img-responsive" width="150px" align="center">
+     </div>
+       <p align="left"><strong>Samuel Boucher</strong> is a <span class="KO_OP2">KO_OP</span> art director and designer. Sam acts as design and art lead on GNOG.</p>
+       <a href="https://twitter.com/lucieviatge" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lucieviatge</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
 
-      <div class="col-sm-4">
+  <div class="col-sm-3">
+    <div align="left">
+       <img src="/images/omar.png" class="img-responsive" width="150px">
+     </div>
+       <p><strong>Omar Dabbous</strong> is the <span class="KO_OP2">KO_OP</span> sound director. He makes spine tingly sound effects and soundscapes.</p>
+       <a href="https://twitter.com/dabuslab" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @dabuslab</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </div>
+
+      <div class="col-sm-3">
+        <div align="left">
        <img src="/images/saleem.png" class="img-responsive" width="150px">
-       <p><strong>Saleem Dabbous</strong> is the co-founder and studio director. He manages the operations and acts as producer on most <span class="KO_OP2">KO_OP</span> projects.</p>
+     </div>
+       <p><strong>Saleem Dabbous</strong> is the co-founder and studio director. He manages the operations and acts as producer on <span class="KO_OP2">KO_OP</span> projects.</p>
        <a href="https://twitter.com/seemo" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @seemo</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
 
      
-      <div class="col-sm-4">
+      <div class="col-sm-3">
+        <div align="left">
        <img src="/images/ramsey.png" class="img-responsive" width="150px">
+     </div>
        <p><strong>Ramsey Kharroubi</strong> is <span class="KO_OP2">KO_OP</span>'s in-house musician and sound designer. He's currently composing the soundscapes of GNOG.</p>
        <a href="https://twitter.com/marskyera" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @marskyera</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
-      <div class="clearfix"></div>
-        <div class="col-sm-4">
-       <img src="/images/gp2.png" class="img-responsive" width="150px">
+ 
+        <div class="col-sm-3">
+       <img src="/images/gp.png" class="img-responsive" width="150px">
        <p><strong>G.P. Lackey</strong> is a <span class="KO_OP2">KO_OP</span> art director and designer known for both his pixel art and low-poly 3D work, alongside his art generators.</p>
        <a href="https://twitter.com/mousefountain" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @mousefountain</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-3">
        <img src="/images/nick.png" class="img-responsive" width="150px">
        <p><strong>Nick Rudzicz</strong> is a <span class="KO_OP2">KO_OP</span> programmer and designer. He keeps the GNOG heads happy and well-oiled.</p>
        <a href="https://twitter.com/nickfourtimes" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @nickfourtimes</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
-      <div class="col-sm-4">
+
+  <div class="col-sm-3">
+       <img src="/images/lucie.png" class="img-responsive" width="150px">
+       <p><strong>Lucie Viatge</strong> is a <span class="KO_OP2">KO_OP</span> art director and designer. She is a multi-disciplinary artist witch, also known as part of the Klondike Collective.</p>
+       <a href="https://twitter.com/monsieureureka" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @monsieureureka</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </div>
+
+      <div class="col-sm-3">
        <img src="/images/bronson.png" class="img-responsive" width="150px">
        <p><strong>Bronson Zgeb</strong> is the co-founder of <span class="KO_OP2">KO_OP</span> and programmer. He's most famously known for creating the Scrullz series. </p>
        <a href="https://twitter.com/bzgeb" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bzgeb</a>
